<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/koldunicText"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9"
                    android:text="@string/paths"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_earth"
                    android:id="@+id/koldunicText1"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp1"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_fire"
                    android:id="@+id/koldunicText2"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp2"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_sorrow"
                    android:id="@+id/koldunicText3"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp3"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_spirit"
                    android:id="@+id/koldunicText4"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp4"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_water"
                    android:id="@+id/koldunicText5"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp5"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/path_wind"
                    android:id="@+id/koldunicText6"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp6"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView9"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9"
                    android:text="Rituals"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/standard_rituals"
                    android:id="@+id/koldunicText7"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp7"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/advanced_rituals"
                    android:id="@+id/koldunicText8"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koldunicHelp8"
                    android:src="@drawable/ic_action_about" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>